updated index.html and css and add images of icon

--- a/index.html
+++ b/index.html
@@ -111,64 +111,51 @@
 
 
     <!-- Tech Stack Section -->
-    <section class="tech-stack" id="tech-stack">
-      <h1>My <b>Tech Stack</b></h1>
-      <p class="tech-intro">
-        I work with a range of modern technologies and tools to build responsive, dynamic, and efficient web
-        applications.
-      </p>
+<section class="tech-stack" id="tech-stack">
+  <h1>My <b>Tech Stack</b></h1>
 
-      <div class="tech-grid">
-        <!-- Frontend -->
-        <div class="tech-card" data-aos="fade-up">
-          <i class="fa-brands fa-html5"></i>
-          <h3>HTML5</h3>
-          <p>Building semantic, accessible, and SEO-friendly website structures.</p>
-        </div>
+  <div class="tech-wheel-carousel">
+    <div class="tech-wheel-track">
+      <!-- Example SVG icons -->
+      <img src="icons/HTML5.svg" alt="HTML5" title="HTML5" class="tech-icon">
+      <img src="icons/CSS3.svg" alt="CSS3" title="CSS3" class="tech-icon">
+      <img src="icons/js.svg" alt="JavaScript" title="JavaScript" class="tech-icon">
+      <img src="icons/React.svg" alt="React" title="React.js" class="tech-icon">
+      <img src="icons/Node.js.svg" alt="Node.js" title="Node.js" class="tech-icon">
+      <img src="icons/MongoDB.svg" alt="MongoDB" title="MongoDB" class="tech-icon">
+      <img src="icons/WordPress.svg" alt="WordPress" title="WordPress" class="tech-icon">
+      <img src="icons/GitHub.svg" alt="Git & GitHub" title="Git & GitHub" class="tech-icon">
+      <img src="icons/C++ (CPlusPlus).svg" alt="C++" title="C++" class="tech-icon">
+      <img src="icons/Express.svg" alt="Express" title="Express" class="tech-icon">
+      <img src="icons/Bootstrap.svg" alt="Bootstrap" title="Bootstrap" class="tech-icon">
+       <img src="icons/Python.svg" alt="Python" title="Python" class="tech-icon">
+      <img src="icons/jQuery.svg" alt="jQuery" title="jQuery" class="tech-icon">
+      <img src="icons/MySQL.svg" alt="MySQL" title="MySQL" class="tech-icon">
+      <img src="icons/Sass.svg" alt="Sass" title="Sass" class="tech-icon">
 
-        <div class="tech-card" data-aos="fade-up">
-          <i class="fa-brands fa-css3-alt"></i>
-          <h3>CSS3</h3>
-          <p>Crafting responsive layouts with animations and clean styling.</p>
-        </div>
+      <!-- duplicate for loop -->
+      <img src="icons/HTML5.svg" alt="HTML5" title="HTML5" class="tech-icon">
+      <img src="icons/CSS3.svg" alt="CSS3" title="CSS3" class="tech-icon">
+      <img src="icons/js.svg" alt="JavaScript" title="JavaScript" class="tech-icon">
+      <img src="icons/React.svg" alt="React" title="React.js" class="tech-icon">
+      <img src="icons/Node.js.svg" alt="Node.js" title="Node.js" class="tech-icon">
+      <img src="icons/MongoDB.svg" alt="MongoDB" title="MongoDB" class="tech-icon">
+      <img src="icons/WordPress.svg" alt="WordPress" title="WordPress" class="tech-icon">
+      <img src="icons/GitHub.svg" alt="Git & GitHub" title="Git & GitHub" class="tech-icon">
+      <img src="icons/C++ (CPlusPlus).svg" alt="C++" title="C++" class="tech-icon">
+      <img src="icons/Express.svg" alt="Express" title="Express" class="tech-icon">
+      <img src="icons/Bootstrap.svg" alt="Bootstrap" title="Bootstrap" class="tech-icon">
+       <img src="icons/Python.svg" alt="Python" title="Python" class="tech-icon">
+      <img src="icons/jQuery.svg" alt="jQuery" title="jQuery" class="tech-icon">
+      <img src="icons/MySQL.svg" alt="MySQL" title="MySQL" class="tech-icon">
+      <img src="icons/Sass.svg" alt="Sass" title="Sass" class="tech-icon">
 
-        <div class="tech-card" data-aos="fade-up">
-          <i class="fa-brands fa-js"></i>
-          <h3>JavaScript</h3>
-          <p>Developing interactive, dynamic features with modern ES6+ concepts.</p>
-        </div>
+    </div>
+  </div>
+</section>
 
-        <div class="tech-card" data-aos="fade-up">
-          <i class="fa-brands fa-react"></i>
-          <h3>React.js</h3>
-          <p>Creating fast, reusable UI components and single-page applications.</p>
-        </div>
 
-        <div class="tech-card" data-aos="fade-up">
-          <i class="fa-brands fa-node-js"></i>
-          <h3>Node.js</h3>
-          <p>Handling backend logic, APIs, and server-side scripting efficiently.</p>
-        </div>
 
-        <div class="tech-card" data-aos="fade-up">
-          <i class="fa-brands fa-database"></i>
-          <h3>MongoDB</h3>
-          <p>Designing NoSQL databases and managing data for scalable systems.</p>
-        </div>
-
-        <div class="tech-card" data-aos="fade-up">
-          <i class="fa-brands fa-wordpress"></i>
-          <h3>WordPress</h3>
-          <p>Building dynamic CMS-based websites using custom plugins and themes.</p>
-        </div>
-
-        <div class="tech-card" data-aos="fade-up">
-          <i class="fa-brands fa-git-alt"></i>
-          <h3>Git & GitHub</h3>
-          <p>Version control and collaboration through Git, GitHub, and open-source projects.</p>
-        </div>
-      </div>
-    </section>
 
 
     <!-- Achievements / Certificates Section -->
